--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="col-md-3">
           <img id="left-image" src="assets\images\New Lands Capture.PNG">
         </div>
-        <div class="col-md-3">
+        <div class="second-column col-md-3">
           <h1>Sorry, friend</h1>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -31,7 +31,7 @@
           </p>
         </div>
 
-        <div class="col-md-3">
+        <div class="third-column col-md-3">
           <h2>Let's play...</h2>
           <hr></hr>
           <p>
@@ -42,7 +42,7 @@
 
         </div>
         <div class="col-md-3">
-          <img id="right-image" src="assets\images\ignorant-attempt-at-image-editing-capture.PNG">
+          <img id="right-image" src="assets\images\3677001989140447a853212d5ba3693f.jpg">
         </div>
 
 
