--- a/index.html
+++ b/index.html
@@ -19,20 +19,19 @@
 
       </div>
       <div class="row row2">
-        <div class="col-md-3">
+        <div class="first-column col-md-3">
           <img id="left-image" src="assets\images\New Lands Capture.PNG">
         </div>
         <div class="second-column col-md-3">
           <h1>Sorry, friend</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          //add image here//
             <hr></hr>
             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
         </div>
 
         <div class="third-column col-md-3">
-          <h2>Let's play...</h2>
+          <h2>Press any key to get started!</h2>
           <hr></hr>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -41,7 +40,7 @@
           </p>
 
         </div>
-        <div class="col-md-3">
+        <div class="fourth-column col-md-3">
           <img id="right-image" src="assets\images\3677001989140447a853212d5ba3693f.jpg">
         </div>
 
