--- a/index.html
+++ b/index.html
@@ -23,20 +23,23 @@
           <img id="left-image" src="assets\images\New Lands Capture.PNG">
         </div>
         <div class="second-column col-md-3">
-          <h1>Sorry, friend</h1>
-          //add image here//
+          <h1>Caught you!</h1>
             <hr></hr>
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-          </p>
+            <p>
+              You'd best be able to name our password, if you want to stay out of the tree today.
+            </p>
         </div>
 
         <div class="third-column col-md-3">
           <h2>Press any key to get started!</h2>
+          <p>Wins
+          <br></br>
+          Current word
+          </p>
           <hr></hr>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            <br></br>
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          <p>Number of guesses remaining
+          <br></br>
+          Letters already guessed
           </p>
 
         </div>
